--- a/src/components/decks/stats/stats.sass
+++ b/src/components/decks/stats/stats.sass
@@ -1,2 +1,3 @@
 stats
     min-width: 300px
+    background: #f9f9f9
